--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <!-- Website template by freewebsitetemplates.com -->
 <html>
 <head>
+	<meta name="google-site-verification" content="wUme0gxpYo4ruQT8OX4j2oluWe2mox16lBwLTwMJxHE" />
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Space Science Website Template</title>
